att de correção de confirnação e cancelar

--- a/teste.html
+++ b/teste.html
@@ -635,12 +635,11 @@
 
     <div id="myModal" class="modal">
         <div class="modal-content">
-            <span class="close">&times;</span>
+            <span class="close" onclick="fecharPopup()">&times;</span>
             <div class="comet-modal-title">Adicionar novo Endereço</div>
             <div class="comet-modal-body">
                 <form id="enderecoForm" onsubmit="handleSubmit(event)">
                     <div class="form-section_1">
-
                         <div class="section-body">
                             <div class="next-row form-row-wrap">
                                 <div class="next-col">
@@ -653,8 +652,8 @@
                                             <div class="text_frete"> Frete </div>
                                         </div>
 
-                                        <input class="next-input" name="nome" placeholder="" autocomplete="off" value=""
-                                            required oninput="validarLetras(this)">
+                                        <input class="next-input" id="nome" name="nome" placeholder=""
+                                            autocomplete="off" value="" required oninput="validarLetras(this)">
 
                                         <input class="next-input-cep" id="cep" name="cep" placeholder=""
                                             autocomplete="off" value="" required
@@ -722,7 +721,7 @@
                                         <input class="next-input-dd" id="dd" height="100%" name="dd" placeholder=""
                                             autocomplete="off" value="" oninput="limitarCaracteres(this, 3)">
 
-                                        <input class="next-input-telefone" name="Telefone" placeholder=""
+                                        <input class="next-input-telefone" id="telefone" name="Telefone" placeholder=""
                                             autocomplete="off" value="" required oninput="validarTelefone(this)">
 
                                         <div class="alertas">
@@ -843,8 +842,7 @@
                                                         </svg> </i>
                                                 </div>
                                             </div>
-
-                                            <button type="button" onclick="exibirEndereco()"
+                                            <button type="button" onclick="salvarInformacoes()"
                                                 class="comet-btn comet-btn-primary comet-btn-large form-item-button button-confirm">
                                                 <span>Confirm</span>
                                             </button>
@@ -852,6 +850,7 @@
                                                 class="comet-btn comet-btn-normal comet-btn-large form-item-button button-cancel">
                                                 <span>Cancel</span>
                                             </button>
+
 
                                         </div>
                                     </div>
@@ -875,11 +874,15 @@
         function buscarEndereco(cep) {
             const url = `http://localhost:3000/endereco/${cep}`;
 
+            // const baseUrl = ''; // Deixe em branco para usar uma URL relativa
+            // const url = `${baseUrl}/endereco/${cep}`;
+
             fetch(url)
                 .then(response => response.json())
                 .then(data => preencherEndereco(data))
                 .catch(error => console.log(error));
         }
+
 
         // Função para buscar o valor do frete com base no CEP
 
@@ -965,29 +968,7 @@
             }
         }
 
-        // Função para exibir o endereço em um popup
-        function exibirEndereco() {
-            const popup = document.getElementById('enderecoPopup');
-            const form = document.getElementById('enderecoForm');
-            const endereco = document.getElementById('endereco').value;
 
-            form.style.display = 'none'; // Ocultar o formulário
-            popup.style.display = 'block'; // Exibir o popup
-
-            const enderecoDetalhes = document.getElementById('enderecoDetalhes');
-            enderecoDetalhes.innerHTML = `
-            <h2>Detalhes do Endereço de Entrega</h2>
-            <p><strong>Nome:</strong> ${form.nome.value} ${form.sobrenome.value}</p>
-            <p><strong>Endereço:</strong> ${endereco}</p>
-            <p><strong>Número:</strong> ${form.numero.value}</p>
-            <p><strong>Bairro:</strong> ${form.bairro.value}</p>
-            <p><strong>Cidade:</strong> ${form.cidade.value}</p>
-            <p><strong>Estado:</strong> ${form.estado.value}</p>
-            <p><strong>CEP:</strong> ${form.cep.value}</p>
-            <p><strong>DDD:</strong> ${form.dd.value}</p>
-            <p><strong>Telefone:</strong> ${form.telefone.value}</p>
-        `;
-        }
 
         // Função para lidar com o envio do formulário
         function handleSubmit(event) {
@@ -1214,34 +1195,117 @@
         }
 
 
-
-        // Função para fechar o popup
-        function fecharPopup() {
-            const popup = document.getElementById('enderecoPopup');
-            const form = document.getElementById('enderecoForm');
-
-            form.style.display = 'block'; // Exibir o formulário novamente
-            popup.style.display = 'none'; // Ocultar o popup
-            form.reset(); // Limpar os campos do formulário
-        }
-
-        var modal = document.getElementById("myModal");
-        var btn = document.getElementById("myBtn");
-        var span = document.getElementsByClassName("close")[0];
-
-        btn.onclick = function () {
+        // Função para abrir o modal
+        function exibirEndereco() {
+            var modal = document.getElementById("myModal");
             modal.style.display = "block";
         }
 
-        span.onclick = function () {
-            modal.style.display = "none";
+        // Função para fechar o modal e limpar os inputs
+        function fecharPopup() {
+            var modals = document.getElementsByClassName("modal");
+            for (var i = 0; i < modals.length; i++) {
+                modals[i].style.display = "none";
+            }
+
+            var popups = document.getElementsByClassName("popup");
+            for (var j = 0; j < popups.length; j++) {
+                popups[j].style.display = "none";
+            }
+
+            // Limpar os campos de input
+            document.getElementById("nome").value = "";
+            document.getElementById("cep").value = "";
+            // Adicione aqui o código para limpar os outros campos de input
+            document.getElementById("prazo").value = "";
+            document.getElementById("frete").value = "";
+            document.getElementById("obs").value = "";
+            document.getElementById("estado").value = "";
+            document.getElementById("cidade").value = "";
+            document.getElementById("dd").value = "";
+            document.getElementById("telefone").value = "";
+            document.getElementById("endereco").value = "";
+            document.getElementById("bairro").value = "";
+            document.getElementById("apto").value = "";
+            document.getElementById("numero").value = "";
+            document.getElementById("info").value = "";
+            document.getElementById("commercial").value = "";
+            document.getElementById("residential").value = "";
         }
 
+
+        // Função para salvar as informações e fechar o modal
+        function salvarInformacoes() {
+            var nome = document.getElementById("nome").value;
+            var cep = document.getElementById("cep").value;
+            var prazo = document.getElementById("prazo").value;
+            var frete = document.getElementById("frete").value;
+            var obs = document.getElementById("obs").value;
+            var estado = document.getElementById("estado").value;
+            var cidade = document.getElementById("cidade").value;
+            var dd = document.getElementById("dd").value;
+            var Telefone = document.getElementById("telefone").value;
+            var endereco = document.getElementById("endereco").value;
+            var bairro = document.getElementById("bairro").value;
+            var apto = document.getElementById("apto").value;
+            var numero = document.getElementById("numero").value;
+            var info = document.getElementById("info").value;
+            var commercial = document.getElementById("commercial").value;
+            var residential = document.getElementById("residential").value;
+
+            // Verificar se todos os campos obrigatórios estão preenchidos
+            if (
+                nome === "" ||
+                cep === "" ||
+                prazo === "" ||
+                frete === "" ||
+                obs === "" ||
+                estado === "" ||
+                cidade === "" ||
+                dd === "" ||
+                Telefone === "" ||
+                endereco === "" ||
+                bairro === "" ||
+                numero === "" ||
+                commercial === "" ||
+                residential === "" 
+            ) {
+                alert("Por favor, preencha todos os campos obrigatórios.");
+                return; // Impedir o salvamento e fechamento do modal se algum campo estiver vazio
+            }
+
+            // Salvar as informações localmente usando o localStorage
+            localStorage.setItem("nome", nome);
+            localStorage.setItem("cep", cep);
+            localStorage.setItem("prazo", prazo);
+            localStorage.setItem("frete", frete);
+            localStorage.setItem("obs", obs);
+            localStorage.setItem("estado", estado);
+            localStorage.setItem("cidade", cidade);
+            localStorage.setItem("telefone", Telefone);
+            localStorage.setItem("endereço", endereco);
+            localStorage.setItem("bairro", bairro);
+            localStorage.setItem("apto", apto);
+            localStorage.setItem("numero", numero);
+            localStorage.setItem("info", info);
+            localStorage.setItem("commercial", commercial);
+            localStorage.setItem("residencial", residential);
+
+            fecharPopup();
+        }
+
+
+        // Evento de clique no botão "Confirmar"
+        document.getElementById("myBtn").onclick = exibirEndereco;
+
+        // Evento de clique fora do modal para fechá-lo
         window.onclick = function (event) {
+            var modal = document.getElementById("myModal");
             if (event.target == modal) {
-                modal.style.display = "none";
+                fecharPopup();
             }
         }
+
 
     </script>
 
