att de novo javascript

--- a/teste.html
+++ b/teste.html
@@ -635,6 +635,7 @@
         /* responsivel */
 
         /* CSS para smartphones */
+        /* CSS para smartphones */
         @media screen and (max-width: 480px) {
 
             /* texto */
@@ -1785,7 +1786,7 @@
 
         // função que calcula o frete depois que buscado o cep
         async function buscarFrete(cep) {
-            const url = `http://localhost:3000/frete/${cep}`;
+            const url = `http://localhost:3001/frete/${cep}`;
 
             try {
                 const response = await fetch(url);
